@@ -205,6 +205,9 @@ Release 2.0.3-alpha - Unreleased
     HADOOP-9152. HDFS can report negative DFS Used on clusters with very small
     amounts of data. (Brock Noland via atm)
 
+    HADOOP-9153. Support createNonRecursive in ViewFileSystem.
+    (Sandy Ryza via tomwhite)
+
 Release 2.0.2-alpha - 2012-09-07 
 
   INCOMPATIBLE CHANGES
